@@ -11,8 +11,9 @@ import static seedu.address.logic.parser.CliSyntax.PREFIX_TAG;
 import static seedu.address.testutil.Assert.assertThrows;
 
 import java.util.ArrayList;
-import java.util.Arrays;
+import java.util.HashMap;
 import java.util.List;
+import java.util.Map;
 
 import seedu.address.commons.core.index.Index;
 import seedu.address.logic.commands.exceptions.CommandException;
@@ -125,9 +126,12 @@ public class CommandTestUtil {
 
         Person person = model.getFilteredPersonList().get(targetIndex.getZeroBased());
         final String[] splitName = person.getName().fullName.split("\\s+");
-        model.updateFilteredPersonList(new PersonContainsKeywordsPredicate(Arrays.asList(splitName[0])));
+
+        Map<String, List<String>> fieldMap = new HashMap<>();
+        fieldMap.put("n/", List.of(splitName[0]));
+
+        model.updateFilteredPersonList(new PersonContainsKeywordsPredicate(fieldMap));
 
         assertEquals(1, model.getFilteredPersonList().size());
     }
-
 }
